# Academy

./: .env  README.md  database.db  main.py  pyproject.toml  requirements.txt
modules/academy/approval/: approval_controller.py  approval_model.py  approval_schemas.py  approval_services.py  approval_validator.py
modules/academy/language_list/: language_list_controller.py  language_list_models.py  language_list_schemas.py  language_list_services.py  language_list_validator.py
modules/academy/updates/: update_services.py
modules/academy/users/: academy_user_controller.py  academy_user_models.py  academy_user_schemas.py  academy_user_services.py  academy_user_validator.py
modules/company/filter/: filter_controller.py  filter_models.py  filter_services.py
modules/company/likes/: like_controller.py  like_models.py  like_services.py  like_validator.py
modules/company/users/: company_user_controller.py  company_user_models.py  company_user_schemas.py  company_user_services.py  company_user_validator.py
modules/students/profile/: profile_contoller.py  profile_models.py  profile_schemas.py  profile_services.py  profile_validator.py
modules/students/profile/english/: english_controller.py  english_models.py  english_schemas.py  (+2 more)
modules/students/users/: student_user_controller.py  student_user_models.py  student_user_schemas.py  student_user_services.py  student_user_validator.py
modules/users/: auth.py  user_controller.py  user_models.py  user_schemas.py  user_services.py  user_validator.py
utils/: auth.py  database.py  imports.py  validator.py
(+10 files in other folders)
